--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -568,6 +568,46 @@ h2 {
     grid-row: 6 / 11;
 }
 
+.about .grid-container .grid-item:nth-child(1) {
+    grid-column: 1 / 4;
+    grid-row: 1 / 9;
+}
+
+.about .grid-container .grid-item:nth-child(2) {
+    grid-column: 1 / 4;
+    grid-row: 9 / 10;
+}
+
+.about .grid-container .grid-item:nth-child(3) {
+    grid-column: 4 / 10;
+    grid-row: 1 / 2;
+}
+
+.about .grid-container .grid-item:nth-child(4) {
+    grid-column: 4 / 7;
+    grid-row: 2 / 10;
+}
+
+.about .grid-container .grid-item:nth-child(5) {
+    grid-column: 7 / 10;
+    grid-row: 2 / 7;
+}
+
+.about .grid-container .grid-item:nth-child(6) {
+    grid-column: 10 / 13;
+    grid-row: 9 / 10;
+}
+
+.about .grid-container .grid-item:nth-child(7) {
+    grid-column: 10 / 13;
+    grid-row: 1 / 9;
+}
+
+.about .grid-container .grid-item:nth-child(8) {
+    grid-column: 7 / 10;
+    grid-row: 7 / 10;
+}
+
 /* =======================
    Footer
 ======================= */
@@ -673,10 +713,6 @@ footer {
         text-align: left;
     }
 
-    .slider-controls {
-        justify-content: center !important;
-    }
-
     .form-grid {
         flex-direction: column;
     }
@@ -698,7 +734,7 @@ footer {
 
     .card img {
         width: 100%;
-        height: 200px;
+        height: 100px;
     }
 
     .pricing-container {
@@ -803,4 +839,57 @@ footer {
         left: 16px;
     }
 
+    .about .grid-container .grid-item:nth-child(1) {
+        grid-column: 1 / 3;
+        grid-row: 1 / 4;
+    }
+
+    .about .grid-container .grid-item:nth-child(2) {
+        display: none;
+    }
+
+    .about .grid-container .grid-item:nth-child(3) {
+        grid-column: 3 / 5;
+        grid-row: 1 / 3;
+    }
+
+    .about .grid-container .grid-item:nth-child(4) {
+        grid-column: 3 / 5;
+        grid-row: 3 / 5;
+    }
+
+    .about .grid-container .grid-item:nth-child(5) {
+        grid-column: 1 / 3;
+        grid-row: 4 / 7;
+    }
+
+    .about .grid-container .grid-item:nth-child(6) {
+        display: none;
+    }
+
+    .about .grid-container .grid-item:nth-child(7) {
+        grid-column: 3 / 5;
+        grid-row: 5 / 14;
+    }
+
+    .about .grid-container .grid-item:nth-child(8) {
+        grid-column: 1 / 3;
+        grid-row: 7 / 14;
+    }
+
+    .services .grid-item {
+        height: 80px;
+    }
+
+    .gallery .image {
+        min-width: 200px;
+        width: 200px;
+        height: 300px;
+    }
+
+    .gallery .container {
+        background-color: var(--color-green);
+        padding: 0;
+        margin: 0;
+    }
 }
